--- a/BuildStats.Web/Web.config
+++ b/BuildStats.Web/Web.config
@@ -11,20 +11,20 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--Custom Settings-->
-    <add key="AppVeyor_API_BuildHistory_URL_Format" value="https://ci.appveyor.com/api/projects/{0}/{1}/history?recordsNumber={2}"/>
-    <add key="Default_Build_Count" value="30"/>
-    <add key="Chart_FontSize" value="12"/>
-    <add key="Chart_Padding_X" value="0"/>
-    <add key="Chart_Padding_Y_Multiplier" value="6"/>
-    <add key="Chart_Bar_MaxHeight" value="50"/>
-    <add key="Chart_Bar_Width" value="5"/>
-    <add key="Chart_Bar_Gap" value="3"/>
-    <add key="Chart_Failed_Color_Code" value="#ff0000"/>
-    <add key="Chart_Succeeded_Color_Code" value="#04b431"/>
-    <add key="Chart_Cancelled_Color_Code" value="#888888"/>
-    <add key="Chart_Title_Color_Code" value="#000000"/>
-    <add key="Chart_Text_Color_Code" value="#777777"/>
-    <add key="Chart_TimeSpan_Format" value="hh\:mm\:ss\.ff"/>
+    <add key="AppVeyor_API_BuildHistory_URL_Format" value="https://ci.appveyor.com/api/projects/{0}/{1}/history?recordsNumber={2}" />
+    <add key="TravisCI_API_BuildHistory_URL_Format" value="https://api.travis-ci.org/repos/{0}/{1}/builds?after_number={2}" />
+    <add key="Default_Build_Count" value="25" />
+    <add key="Chart_FontSize" value="12" />
+    <add key="Chart_Bar_MaxHeight" value="50" />
+    <add key="Chart_Bar_Width" value="5" />
+    <add key="Chart_Bar_Gap" value="3" />
+    <add key="Chart_Success_Color_Code" value="#04b431" />
+    <add key="Chart_Failed_Color_Code" value="#ff0000" />
+    <add key="Chart_Pending_Color_Code" value="#ffbf00" />
+    <add key="Chart_Cancelled_Color_Code" value="#888888" />
+    <add key="Chart_Title_Color_Code" value="#000000" />
+    <add key="Chart_Text_Color_Code" value="#777777" />
+    <add key="Chart_TimeSpan_Format" value="hh\:mm\:ss\.ff" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
