Added feature to filter by branch

--- a/BuildStats.Web/Web.config
+++ b/BuildStats.Web/Web.config
@@ -11,7 +11,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--Custom Settings-->
-    <add key="AppVeyor_API_BuildHistory_URL_Format" value="https://ci.appveyor.com/api/projects/{0}/{1}/history?recordsNumber={2}" />
+    <add key="AppVeyor_API_BuildHistory_URL_Format" value="https://ci.appveyor.com/api/projects/{0}/{1}/history?branch={2}&amp;recordsNumber={3}" />
     <add key="TravisCI_API_BuildHistory_URL_Format" value="https://api.travis-ci.org/repos/{0}/{1}/builds?after_number={2}" />
     <add key="Default_Build_Count" value="25" />
     <add key="Chart_FontSize" value="12" />
