--- a/BuildStats.Web/Web.config
+++ b/BuildStats.Web/Web.config
@@ -25,6 +25,7 @@
     <add key="Chart_Title_Color_Code" value="#000000" />
     <add key="Chart_Text_Color_Code" value="#777777" />
     <add key="Chart_TimeSpan_Format" value="hh\:mm\:ss\.ff" />
+    <add key="Lanem_Log_Directory_Path" value="~\App_Data\Logs" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -62,4 +63,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.webServer>
+    <modules>
+      <add name="Lanem" type="Lanem.ErrorHandlerModule, Lanem" />
+    </modules>
+  </system.webServer>
 </configuration>
