Custom error pages and 404 result
Added custom error pages and return 404 for projects which don't exist
in AppVeyor

--- a/BuildStats.Web/BuildStats.Web.csproj
+++ b/BuildStats.Web/BuildStats.Web.csproj
@@ -109,6 +109,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ErrorPages\BadRequest.html" />
+    <Content Include="ErrorPages\Forbidden.html" />
+    <Content Include="ErrorPages\InternalError.html" />
+    <Content Include="ErrorPages\NotFound.html" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
