--- a/BuildStats.Web/Web.config
+++ b/BuildStats.Web/Web.config
@@ -65,7 +65,26 @@
   </system.codedom>
   <system.webServer>
     <modules>
+      <!-- Remove default ASP.NET modules which are not required by this website -->
+      <remove name="WindowsAuthentication" />
+      <remove name="FormsAuthentication" />
+      <remove name="PassportAuthentication" />
+      <remove name="FormsAuthentication" />
+      <remove name="RoleManager" />
+      <remove name="AnonymousIdentification" />
+      <remove name="Profile" />
+      <!-- Add global error logging -->
       <add name="Lanem" type="Lanem.ErrorHandlerModule, Lanem" />
     </modules>
+    <httpErrors errorMode="Custom" defaultResponseMode="File" existingResponse="Replace">
+      <remove statusCode="400" />
+      <remove statusCode="403" />
+      <remove statusCode="404" />
+      <remove statusCode="500" />
+      <error statusCode="400" path="ErrorPages\BadRequest.html" />
+      <error statusCode="403" path="ErrorPages\Forbidden.html" />
+      <error statusCode="404" path="ErrorPages\NotFound.html" />
+      <error statusCode="500" path="ErrorPages\InternalError.html" />
+    </httpErrors>
   </system.webServer>
 </configuration>
