Added NCrunch files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,9 @@ _TeamCity*
 # NCrunch
 _NCrunch_*
 .*crunch*.local.xml
+*.ncrunchsolution
+*.ncrunchsolution.*
+*.ncrunchproject
 
 # MightyMoose
 *.mm.*
