--- a/BuildStats.Core/BuildStats.Core.csproj
+++ b/BuildStats.Core/BuildStats.Core.csproj
@@ -47,8 +47,11 @@
     <Compile Include="CircleCI\CircleCIBuildHistoryClient.cs" />
     <Compile Include="CircleCI\CircleCIBuildHistoryParser.cs" />
     <Compile Include="CircleCI\CircleCIFactory.cs" />
+    <Compile Include="INuGetClient.cs" />
     <Compile Include="ISerializer.cs" />
     <Compile Include="JsonSerializer.cs" />
+    <Compile Include="NuGetClient.cs" />
+    <Compile Include="NuGetPackageInfo.cs" />
     <Compile Include="TravisCI\TravisCIBuildHistoryClient.cs" />
     <Compile Include="Build.cs" />
     <Compile Include="AppVeyor\AppVeyorBuildHistoryParser.cs" />
