--- a/BuildStats.Web/Web.config
+++ b/BuildStats.Web/Web.config
@@ -62,6 +62,12 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
+    <handlers>
+      <add name="NuGetUrlRoutingHandler"
+           type="System.Web.Routing.UrlRoutingHandler, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"
+           path="/nuget/*"
+           verb="GET"/>
+    </handlers>
     <modules>
       <!-- Remove default ASP.NET modules which are not required by this website -->
       <remove name="WindowsAuthentication" />
