--- a/BuildStats.Web/Web.config
+++ b/BuildStats.Web/Web.config
@@ -10,7 +10,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--Custom Settings-->
+    <!--Build History Chart Settings-->
     <add key="Default_Build_Count" value="25" />
     <add key="Chart_FontSize" value="12" />
     <add key="Chart_Bar_MaxHeight" value="50" />
@@ -23,6 +23,16 @@
     <add key="Chart_Title_Color_Code" value="#000000" />
     <add key="Chart_Text_Color_Code" value="#777777" />
     <add key="Chart_TimeSpan_Format" value="hh\:mm\:ss\.ff" />
+    <!--NuGet Badge Settings-->
+    <add key="NuGet_FontSize" value="12" />
+    <add key="NuGet_FontFamily" value="Helvetica,Arial,sans-serif" />
+    <add key="NuGet_FontColour" value="#000000" />
+    <add key="NuGet_Badge_Height" value="20" />
+    <add key="NuGet_Badge_CornerRadius" value="2" />
+    <add key="NuGet_Badge_BackgroundColour_Title" value="#555555" />
+    <add key="NuGet_Badge_BackgroundColour_Version" value="#00b359" />
+    <add key="NuGet_Badge_BackgroundColour_Downloads" value="#1a8cff" />
+    <!--Lanem Settings-->
     <add key="Lanem_Log_Directory_Path" value="~\App_Data\Logs" />
   </appSettings>
   <!--
