Fixed the width of the NuGet badge to be measured more precisely to the text.

--- a/BuildStats.Web/BuildStats.Web.csproj
+++ b/BuildStats.Web/BuildStats.Web.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Controllers\CircleCIController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NuGetController.cs" />
+    <Compile Include="Controllers\TestsController.cs" />
     <Compile Include="Controllers\TravisCIController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -145,8 +146,9 @@
     <Content Include="packages.config" />
     <Content Include="Views\Shared\Chart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\Tests.cshtml" />
+    <Content Include="Views\Tests\BuildHistoryChart.cshtml" />
     <Content Include="Views\NuGet\Info.cshtml" />
+    <None Include="Views\Tests\NuGetBadge.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
