--- a/BuildStats.Web/Web.config
+++ b/BuildStats.Web/Web.config
@@ -29,9 +29,9 @@
     <add key="NuGet_FontColour" value="#000000" />
     <add key="NuGet_Badge_Height" value="20" />
     <add key="NuGet_Badge_CornerRadius" value="2" />
-    <add key="NuGet_Badge_BackgroundColour_Title" value="#555555" />
+    <add key="NuGet_Badge_BackgroundColour_Title" value="#333333" />
     <add key="NuGet_Badge_BackgroundColour_Version" value="#00b359" />
-    <add key="NuGet_Badge_BackgroundColour_Downloads" value="#1a8cff" />
+    <add key="NuGet_Badge_BackgroundColour_Downloads" value="#483C32" />
     <!--Lanem Settings-->
     <add key="Lanem_Log_Directory_Path" value="~\App_Data\Logs" />
   </appSettings>
