--- a/BuildStats.Core/BuildStats.Core.csproj
+++ b/BuildStats.Core/BuildStats.Core.csproj
@@ -41,30 +41,32 @@
     <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BuildSystemFactory.cs" />
-    <Compile Include="AppVeyor\AppVeyorBuildHistoryClient.cs" />
-    <Compile Include="AppVeyor\AppVeyorFactory.cs" />
-    <Compile Include="CircleCI\CircleCIBuildHistoryClient.cs" />
-    <Compile Include="CircleCI\CircleCIBuildHistoryParser.cs" />
-    <Compile Include="CircleCI\CircleCIFactory.cs" />
-    <Compile Include="INuGetClient.cs" />
-    <Compile Include="ISerializer.cs" />
-    <Compile Include="JsonSerializer.cs" />
-    <Compile Include="NuGetClient.cs" />
-    <Compile Include="NuGetPackageInfo.cs" />
-    <Compile Include="TravisCI\TravisCIBuildHistoryClient.cs" />
-    <Compile Include="Build.cs" />
-    <Compile Include="AppVeyor\AppVeyorBuildHistoryParser.cs" />
-    <Compile Include="BuildStatistics.cs" />
-    <Compile Include="BuildStatus.cs" />
-    <Compile Include="IBuildHistoryClient.cs" />
-    <Compile Include="IBuildHistoryParser.cs" />
-    <Compile Include="IBuildStatistics.cs" />
-    <Compile Include="IRestfulApiClient.cs" />
+    <Compile Include="BuildHistoryChart\BuildSystemFactory.cs" />
+    <Compile Include="BuildHistoryChart\AppVeyor\AppVeyorBuildHistoryClient.cs" />
+    <Compile Include="BuildHistoryChart\AppVeyor\AppVeyorFactory.cs" />
+    <Compile Include="BuildHistoryChart\CircleCI\CircleCIBuildHistoryClient.cs" />
+    <Compile Include="BuildHistoryChart\CircleCI\CircleCIBuildHistoryParser.cs" />
+    <Compile Include="BuildHistoryChart\CircleCI\CircleCIFactory.cs" />
+    <Compile Include="PackageBadge\MyGet\IMyGetClient.cs" />
+    <Compile Include="PackageBadge\NuGet\INuGetClient.cs" />
+    <Compile Include="Common\ISerializer.cs" />
+    <Compile Include="Common\JsonSerializer.cs" />
+    <Compile Include="PackageBadge\MyGet\MyGetClient.cs" />
+    <Compile Include="PackageBadge\NuGet\NuGetClient.cs" />
+    <Compile Include="PackageBadge\PackageInfo.cs" />
+    <Compile Include="BuildHistoryChart\TravisCI\TravisCIBuildHistoryClient.cs" />
+    <Compile Include="BuildHistoryChart\Build.cs" />
+    <Compile Include="BuildHistoryChart\AppVeyor\AppVeyorBuildHistoryParser.cs" />
+    <Compile Include="BuildHistoryChart\BuildStatistics.cs" />
+    <Compile Include="BuildHistoryChart\BuildStatus.cs" />
+    <Compile Include="BuildHistoryChart\IBuildHistoryClient.cs" />
+    <Compile Include="BuildHistoryChart\IBuildHistoryParser.cs" />
+    <Compile Include="BuildHistoryChart\IBuildStatistics.cs" />
+    <Compile Include="Common\IRestfulApiClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RestfulApiClient.cs" />
-    <Compile Include="TravisCI\TravisCIBuildHistoryParser.cs" />
-    <Compile Include="TravisCI\TravisCIFactory.cs" />
+    <Compile Include="Common\RestfulApiClient.cs" />
+    <Compile Include="BuildHistoryChart\TravisCI\TravisCIBuildHistoryParser.cs" />
+    <Compile Include="BuildHistoryChart\TravisCI\TravisCIFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
