Finishing the new feature to add MyGet support

--- a/BuildStats.Web/Web.config
+++ b/BuildStats.Web/Web.config
@@ -23,15 +23,15 @@
     <add key="Chart_Title_Color_Code" value="#000000" />
     <add key="Chart_Text_Color_Code" value="#777777" />
     <add key="Chart_TimeSpan_Format" value="hh\:mm\:ss\.ff" />
-    <!--NuGet Badge Settings-->
-    <add key="NuGet_FontSize" value="12" />
-    <add key="NuGet_FontFamily" value="Helvetica,Arial,sans-serif" />
-    <add key="NuGet_FontColour" value="#000000" />
-    <add key="NuGet_Badge_Height" value="20" />
-    <add key="NuGet_Badge_CornerRadius" value="2" />
-    <add key="NuGet_Badge_BackgroundColour_Title" value="#333333" />
-    <add key="NuGet_Badge_BackgroundColour_Version" value="#00b359" />
-    <add key="NuGet_Badge_BackgroundColour_Downloads" value="#483C32" />
+    <!--Package Badge Settings-->
+    <add key="Package_FontSize" value="12" />
+    <add key="Package_FontFamily" value="Helvetica,Arial,sans-serif" />
+    <add key="Package_FontColour" value="#000000" />
+    <add key="Package_Badge_Height" value="20" />
+    <add key="Package_Badge_CornerRadius" value="2" />
+    <add key="Package_Badge_BackgroundColour_Title" value="#333333" />
+    <add key="Package_Badge_BackgroundColour_Version" value="#00b359" />
+    <add key="Package_Badge_BackgroundColour_Downloads" value="#483C32" />
     <!--Lanem Settings-->
     <add key="Lanem_Log_Directory_Path" value="~\App_Data\Logs" />
   </appSettings>
@@ -75,7 +75,7 @@
     <handlers>
       <add name="NuGetUrlRoutingHandler"
            type="System.Web.Routing.UrlRoutingHandler, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"
-           path="/nuget/*"
+           path="/*"
            verb="GET"/>
     </handlers>
     <modules>
