Extended the web implementation in F#

--- a/BuildStats.Web.Fsharp/BuildStats.Web.Fsharp.fsproj
+++ b/BuildStats.Web.Fsharp/BuildStats.Web.Fsharp.fsproj
@@ -55,7 +55,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Startup.fs" />
+    <Compile Include="Web.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
