--- a/BuildStats.Core.Tests/packages.config
+++ b/BuildStats.Core.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="FsUnit" version="2.1.0" targetFramework="net46" />
+  <package id="NUnit" version="3.2.0" targetFramework="net46" />
 </packages>
