--- a/BuildStats.Suave/packages.config
+++ b/BuildStats.Suave/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
   <package id="Suave" version="1.1.2" targetFramework="net452" />
 </packages>
