Work in progress

--- a/BuildStats.Core.Tests/BuildStats.Core.Tests.fsproj
+++ b/BuildStats.Core.Tests/BuildStats.Core.Tests.fsproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="NuGetPackageTests.fs" />
+    <Compile Include="MyGetPackageTests.fs" />
     <Content Include="packages.config" />
     <Content Include="App.config" />
   </ItemGroup>
