Removed some redundancy by composing functions

--- a/BuildStats.Suave/BuildStats.Suave.fsproj
+++ b/BuildStats.Suave/BuildStats.Suave.fsproj
@@ -58,7 +58,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="ViewModels.fs" />
     <Compile Include="App.fs" />
-    <None Include="Package.svg">
+    <None Include="Package.liquid">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="App.config" />
