Got basic AppVeyor chart working in Suave

--- a/BuildStats.Suave/BuildStats.Suave.fsproj
+++ b/BuildStats.Suave/BuildStats.Suave.fsproj
@@ -56,6 +56,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="QueryParameterHelper.fs" />
     <Compile Include="ViewModels.fs" />
     <Compile Include="App.fs" />
     <Content Include="BuildHistory.svg">
