Added Dockerfile and .travis.yml

--- a/BuildStats.Suave/BuildStats.Suave.fsproj
+++ b/BuildStats.Suave/BuildStats.Suave.fsproj
@@ -67,6 +67,9 @@
     </Content>
     <None Include="App.config" />
     <Content Include="packages.config" />
+    <Content Include="Dockerfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="DotLiquid">
