Fixed bug and improved F# code

--- a/BuildStats.Suave/BuildStats.Suave.fsproj
+++ b/BuildStats.Suave/BuildStats.Suave.fsproj
@@ -56,7 +56,8 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="QueryParameterHelper.fs" />
+    <Compile Include="QueryParameterParser.fs" />
+    <Compile Include="Models.fs" />
     <Compile Include="ViewModels.fs" />
     <Compile Include="App.fs" />
     <Content Include="BuildHistory.liquid">
