Added error handler

--- a/BuildStats.Suave/BuildStats.Suave.fsproj
+++ b/BuildStats.Suave/BuildStats.Suave.fsproj
@@ -66,6 +66,9 @@
     <Content Include="Package.liquid">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Error.liquid">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="index.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
