--- a/BuildStats.Core/BuildStats.Core.fsproj
+++ b/BuildStats.Core/BuildStats.Core.fsproj
@@ -8,11 +8,11 @@
     <ProjectGuid>51806663-6f6c-456b-a633-1cadfc8caca7</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>BuildStats.Core.Fsharp</RootNamespace>
-    <AssemblyName>BuildStats.Core.Fsharp</AssemblyName>
+    <AssemblyName>BuildStats.Core</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Name>BuildStats.Core.Fsharp</Name>
+    <Name>BuildStats.Core</Name>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -23,7 +23,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\BuildStats.Core.Fsharp.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\BuildStats.Core.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
