--- a/BuildStats.Core/BuildStats.Core.fsproj
+++ b/BuildStats.Core/BuildStats.Core.fsproj
@@ -60,7 +60,7 @@
   <ItemGroup>
     <Reference Include="FSharp.Core">
       <HintPath>..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
-      <Private>False</Private>
+      <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="Newtonsoft.Json">
