--- a/BuildStats.Core/BuildStats.Core.fsproj
+++ b/BuildStats.Core/BuildStats.Core.fsproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Caching" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
