--- a/BuildStats.Suave/Dockerfile
+++ b/BuildStats.Suave/Dockerfile
@@ -1,9 +1,8 @@
-FROM mono:4.2
+FROM mono:4
 
 RUN mkdir /app
 COPY . /app
 
 ENV MONO_THREADS_PER_CPU=5000
 
-ENTRYPOINT ["mono", "/app/BuildStats.Suave.exe", "-d"]
-CMD ["--server"]
+ENTRYPOINT ["mono", "/app/BuildStats.Suave.exe", "--server"]
