Added Sentry integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ services:
 solution: BuildStats.sln
 after_success:
   - docker build -t dustinmoris/ci-buildstats ./BuildStats.Suave/bin/Release
-  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker push dustinmoris/ci-buildstats
