--- a/BuildStats.Suave/BuildStats.Suave.fsproj
+++ b/BuildStats.Suave/BuildStats.Suave.fsproj
@@ -95,6 +95,10 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SharpRaven">
+      <HintPath>..\packages\SharpRaven.2.1.0\lib\net45\SharpRaven.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Suave">
       <HintPath>..\packages\Suave.1.1.3\lib\net40\Suave.dll</HintPath>
       <Private>True</Private>
@@ -104,6 +108,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
