--- a/BuildStats.Suave/packages.config
+++ b/BuildStats.Suave/packages.config
@@ -3,6 +3,7 @@
   <package id="DotLiquid" version="1.8.0" targetFramework="net46" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="SharpRaven" version="2.1.0" targetFramework="net46" />
   <package id="Suave" version="1.1.3" targetFramework="net46" />
   <package id="Suave.DotLiquid" version="1.1.3" targetFramework="net46" />
 </packages>
