Work in progress

--- a/BuildStats/tests/BuildStats.Tests/BuildStats.Tests.fsproj
+++ b/BuildStats/tests/BuildStats.Tests/BuildStats.Tests.fsproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\BuildStats.Core\BuildStats.Core.fsproj" />
+    <ProjectReference Include="..\..\src\BuildStats\BuildStats.fsproj" />
   </ItemGroup>
 
 </Project>
