Finished migration to Giraffe...

--- a/BuildStats/src/BuildStats/BuildStats.fsproj
+++ b/BuildStats/src/BuildStats/BuildStats.fsproj
@@ -29,6 +29,7 @@
     <Compile Include="Common.fs" />
     <Compile Include="BuildHistoryCharts.fs" />
     <Compile Include="PackageServices.fs" />
+    <Compile Include="TextSize.fs" />
     <Compile Include="Models.fs" />
     <Compile Include="Views.fs" />
     <Compile Include="Program.fs" />
