--- a/BuildStats/src/BuildStats/BuildStats.fsproj
+++ b/BuildStats/src/BuildStats/BuildStats.fsproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <Version>4.4.0</Version>
     <DebugType>portable</DebugType>
     <AssemblyName>BuildStats</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -36,9 +37,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="pages\*.html">
+    <Content Include="pages\*.html;Dockerfile">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  
+
 </Project>
