--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,10 @@ version: 0.1.0-{build}
 image: Visual Studio 2017
 environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
+  DOCKER_USERNAME:
+    secure: bDPKwqVjooeu2YoztZ0QJy698lawFCmIn7jMQKOkrEo=
+  DOCKER_PASSWORD:
+    secure: rNVSLt9bSh6feHbxoZ2VuA==
 init:
   - git config --global core.autocrlf true
 build: off
