--- a/tests/BuildStats.Tests/BuildStats.Tests.fsproj
+++ b/tests/BuildStats.Tests/BuildStats.Tests.fsproj
@@ -4,7 +4,8 @@
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="**/*.fs" />
+    <Compile Include="PackageTests.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.*" />
