--- a/src/BuildStats/BuildStats.fsproj
+++ b/src/BuildStats/BuildStats.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Version>4.6.0</Version>
+    <Version>4.7.0</Version>
     <AssemblyName>BuildStats</AssemblyName>
     <OutputType>Exe</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -14,6 +14,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.*" />
     <PackageReference Include="Giraffe" Version="2.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="2.1.*" />
+    <PackageReference Include="Polly.Extensions.Http" Version="2.0.*" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +24,7 @@
     <Compile Include="PackageServices.fs" />
     <Compile Include="TextSize.fs" />
     <Compile Include="Models.fs" />
+    <Compile Include="SVGs.fs" />
     <Compile Include="Views.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
