--- a/src/BuildStats/BuildStats.fsproj
+++ b/src/BuildStats/BuildStats.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Version>4.7.1</Version>
+    <Version>4.8.0</Version>
     <AssemblyName>BuildStats</AssemblyName>
     <OutputType>Exe</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -26,6 +26,7 @@
     <Compile Include="Models.fs" />
     <Compile Include="SVGs.fs" />
     <Compile Include="Views.fs" />
+    <Compile Include="IpAddressWhitelisting.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
